Base frame work added

--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,8 @@ minima:
     # facebook: jekyll
     # flickr:   jekyll
     # instagram: jekyll
-    # linkedin: jekyll
+    linkedin: fan-feng-4205b214b
+    email: fanfengng@yahoo.com
     # pinterest: jekyll
     # youtube: jekyll
     # youtube_channel: UC8CXR0-3I70i1tfPg1PAE1g
